SFDC Automation/src/objects/Executive_Sponsors__c.object
<CustomObject>
    <description>Object used to track progress with executive sponsor program.
There are many fields that exist in the account and contact objects but given the nature of the users (executives), we didn&apos;t want them to force the data to be complete in those objects to pull them into this one.</description>
    <fields>
        <fullName>Action_Items__c</fullName>
        <label>Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Name__c</fullName>
        <label>Admin Assistant Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Assistant_Phone__c</fullName>
        <label>Admin Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <label>Authority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Goals__c</fullName>
        <label>Business Goals</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Preferences__c</fullName>
        <label>Business Preferences</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSI_Score__c</fullName>
        <description>To hold CSI Score. Initially it will be entered. Once we create an account level rollup, we will create a formula field to point to that number</description>
        <inlineHelpText>Customer Satisfaction Index in a scale 1 - 100</inlineHelpText>
        <label>CSI Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Executive Sponsors</relationshipLabel>
        <relationshipName>Executive_Sponsors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Overview__c</fullName>
        <label>Company Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Revenue__c</fullName>
        <label>Company Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Executive Sponsors</relationshipLabel>
        <relationshipName>Executive_Sponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Phone</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Executive Sponsors (Contact Phone)</relationshipLabel>
        <relationshipName>Executive_Sponsors2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Title</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Executive Sponsors (Contact Title)</relationshipLabel>
        <relationshipName>Executive_Sponsors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTS_Revenue__c</fullName>
        <label>DTS Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Role__c</fullName>
        <label>Decision-Making Role</label>
        <picklist>
            <picklistValues>
                <fullName>C-Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Champion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>FMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label># Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <picklist>
            <picklistValues>
                <fullName>Dennis Cooke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karen Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todd Skiles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FMS_Contractual_Revenue__c</fullName>
        <inlineHelpText>Rolling 12 Month Revenue as of March 1st, 2015. Please use revenues from the last spreadsheet provided. Thank You.</inlineHelpText>
        <label>FMS Contractual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMS_Local_Rental_Revenue__c</fullName>
        <label>FMS Local Rental Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMS_Margin__c</fullName>
        <label>FMS Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMS_National_Rental_Revenue__c</fullName>
        <label>FMS National Rental Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMS_Pipeline__c</fullName>
        <label>FMS Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMS_UVS_Revenue__c</fullName>
        <label>FMS UVS Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSL_Units__c</fullName>
        <label>FSL Units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Status__c</fullName>
        <label>Family Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_news__c</fullName>
        <label>Financial news</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fleet_Adds__c</fullName>
        <label>Fleet Adds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Reductions__c</fullName>
        <label>Fleet Reductions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fortune_Rank__c</fullName>
        <label>Fortune Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HQ_Location__c</fullName>
        <label>HQ Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadership_Changes__c</fullName>
        <label>Leadership Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LinkedIn_record__c</fullName>
        <description>This is a link to the LinkedIn record for that contact</description>
        <label>LinkedIn record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>M_A_or_Expansions__c</fullName>
        <label>M&amp;A or Expansions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Major_Competitors__c</fullName>
        <label>Major Competitors</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memberships__c</fullName>
        <label>Memberships</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ODM_Revenue__c</fullName>
        <description>To store the amount of OnDemand revenue</description>
        <label>ODM Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Acct_Info__c</fullName>
        <label>Other Acct Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Company_Info__c</fullName>
        <label>Other Company Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Title__c</fullName>
        <label>Primary Contact Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_12M_Margin__c</fullName>
        <label>Ryder 12M Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ryder_12M_Revenue__c</fullName>
        <inlineHelpText>Rolling 12 month revenue as of March 1st, 2015</inlineHelpText>
        <label>Ryder 12M Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ryder_Executive_Sponsor__c</fullName>
        <description>Name of the Ryder Executive Sponsor</description>
        <label>Ryder Executive Sponsor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_Revenue__c</fullName>
        <label>FMS Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ryder_Tenure__c</fullName>
        <label>Ryder Tenure</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCS_Lost_Business__c</fullName>
        <label>SCS Lost Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCS_Margin__c</fullName>
        <label>SCS Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCS_Pipeline__c</fullName>
        <label>SCS Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCS_Revenue__c</fullName>
        <label>SCS Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Name__c</fullName>
        <label>Secondary Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Phone__c</fullName>
        <label>Secondary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Title__c</fullName>
        <label>Secondary Contact Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_with_Ryder__c</fullName>
        <label>Services with Ryder</label>
        <picklist>
            <picklistValues>
                <fullName>FSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Locations__c</fullName>
        <label>Total Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>SCS_Margin__c + FMS_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Ryder_Revenue__c + SCS_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <label>Total Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University_College__c</fullName>
        <label>Alma Mater</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Warehouses__c</fullName>
        <label># of Warehouses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Executive Sponsors</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sponsored Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>